Fixed z-index bug in ModalDialog

--- a/component-lib/src/molecules/ModalDialog/ModalDialog.pcss
+++ b/component-lib/src/molecules/ModalDialog/ModalDialog.pcss
@@ -7,7 +7,7 @@
     position: fixed;
     top: 0;
     width: 100%;
-    z-index: 1;
+    z-index: 46;
 
     &--active {
         display: block;
